JumpScript/tests/baselines/reference/module_augmentExistingVariable.errors.txt
tests/cases/compiler/module_augmentExistingVariable.jump(1,5): error TS2300: Duplicate identifier 'console'.
tests/cases/compiler/module_augmentExistingVariable.jump(3,8): error TS2300: Duplicate identifier 'console'.


==== tests/cases/compiler/module_augmentExistingVariable.jump (2 errors) ====
    var console: any;
        ~~~~~~~
!!! error TS2300: Duplicate identifier 'console'.
    
    module console {
           ~~~~~~~
!!! error TS2300: Duplicate identifier 'console'.
        export var x = 2;
    }